Changelog for BannerY.

1.3.0 rc (31.07.2014)
============
- Added ability to set range of dates for banner display.
- Added icons to context menu.
- Improved user interface.
- [#9] Fixed url of image in positions window.

1.2.0 beta1 (22.10.2013)
============
- Improved builder.
- Added russian lexicon with snippet parameters.
- Added property "source" in object byAd. Now you can select separate media sources for each ad.
- Removed system setting "bannery.media_source".
- Rewritten snippet "BannerY". Now it works through pdoTools and has many new features.
- Improved select of resource for banner in url input.
- Fixed verification of url that entered manually in url input;
- [#2] Image can be removed from banner.

1.1.0 beta (15.07.2013)
============
- Special version by Evd.
- Renamed "ads.grid.js" to "banners.grid.js" because of adBlock issue.
- Support media source for image
- Fixed empty image
- Fixed displaying image in grid and update window
- Fixed select image in browser
- Add settings on install/upgrade
- Removed unused getWorkingContext
- New snippet parameters: "tplOuter" & "toPlaceholder".
- Outer template don't render if output empty

1.0.1 pl (01.10.2012)
============
- Fixed ads/update processor, so now it not change idx of existing AdPosition
- Added combobox for easy selecting of site resources. Also you can specify custom urls (verificated by filter_var()).
- Removed hardcoded manager url from stats.panel.js.

1.0.0 pl (13.09.2012)
============
- Renamed to BannerY
- Added text field "description" for Ads.
- UI improvements. Now you can view all Ads of Position in popup window and add/remove/sort them.
- Added drag-n-drop sorting feature for Ads in Position for specifying exact order of displaying.
- Added properties for snippet BannerX and new sortby - "idx".
- Added quick enable\disable ads in context menu.
- Added filter by position in ads grid
- Added search in ads and positions grids


0.2.2 pl (06.09.2012)
=============