@@ -1,3 +1,3 @@
-<p><a href="bannerclick/[[+adposition]]"><img src="[[+image]]" alt="[[+name]]" title="[[+description]]"/></a></p>
+<p><a href="[[++bannery_click]]/[[+adposition]]"><img src="[[+image]]" alt="[[+name]]" title="[[+description]]"/></a></p>
 <p>Banner with extra params (available as placeholders in banner URL):<br />
-<a href="bannerclick/[[+adposition]]?id=[[*id]]&amp;something=123"><img src="[[+image]]" alt="[[+name]]" /></a></p>
+<a href="[[++bannery_click]]/[[+adposition]]?id=[[*id]]&amp;something=123"><img src="[[+image]]" alt="[[+name]]" /></a></p>
