@@ -1,0 +1,6 @@
+<?php
+
+$_lang['area_modextra_main'] = 'Main';
+
+$_lang['setting_bannery_click'] = 'Banner click variable';
+$_lang['setting_bannery_click_desc'] = 'Specify the variable on which you need to consider that there was a click on the banner.';
