@@ -1,0 +1,6 @@
+<?php
+
+$_lang['area_modextra_main'] = 'Основное';
+
+$_lang['setting_bannery_click'] = 'Переменная для учета клика';
+$_lang['setting_bannery_click_desc'] = 'Укажите переменную, по которой нужно учитывать, что произошел клик по банеру.';
